Реализован счетчик нажатий на кнопку

--- a/Counter/Base.lproj/Main.storyboard
+++ b/Counter/Base.lproj/Main.storyboard
@@ -1,24 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad10_2" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Counter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="810" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxp-vD-pgI">
+                                <rect key="frame" x="91" y="444.5" width="628" height="282.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="jxp-vD-pgI" secondAttribute="height" multiplier="20:9" id="aZz-sT-McW"/>
+                                    <constraint firstAttribute="width" secondItem="jxp-vD-pgI" secondAttribute="height" multiplier="20:9" id="k2V-Zs-cXT"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" image="hand.tap" catalog="system" title="Tap"/>
+                                <connections>
+                                    <action selector="buttonDidTap:" destination="BYZ-38-t0r" eventType="touchDown" id="t1R-fU-hYM"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jQI-mB-Hvh">
+                                <rect key="frame" x="84" y="125.5" width="642" height="251"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jxp-vD-pgI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="58K-Kz-RMJ"/>
+                            <constraint firstItem="jxp-vD-pgI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="CGt-1t-eHi"/>
+                            <constraint firstItem="jxp-vD-pgI" firstAttribute="top" secondItem="jQI-mB-Hvh" secondAttribute="bottom" constant="68" id="Qh5-tm-6WH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jxp-vD-pgI" secondAttribute="trailing" constant="91" id="RqV-SD-WAo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jQI-mB-Hvh" secondAttribute="trailing" constant="84" id="aXw-7u-QCU"/>
+                            <constraint firstItem="jxp-vD-pgI" firstAttribute="top" secondItem="jQI-mB-Hvh" secondAttribute="bottom" constant="68" id="hXw-7S-DFZ"/>
+                            <constraint firstItem="jQI-mB-Hvh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="84" id="mdw-nB-Kcu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jxp-vD-pgI" secondAttribute="bottom" constant="353" id="mxV-lu-8gn"/>
+                            <constraint firstItem="jQI-mB-Hvh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="105.5" id="qWg-W9-58q"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jxp-vD-pgI" secondAttribute="trailing" constant="91" id="vyC-P2-DLo"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="clickButton" destination="jxp-vD-pgI" id="6yS-xA-0S9"/>
+                        <outlet property="counterValue" destination="jQI-mB-Hvh" id="rVB-z2-NYc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="111.94029850746269" y="-2.7459954233409607"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hand.tap" catalog="system" width="112" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
